--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Daniel Bis dmb16f@my.fsu.edu
 Grzegorz Kakareko gk15@my.fsu.edu 
-Mark Thomas mtw14@my.fsu.edu
+Mark Thomas Walker mtw14@my.fsu.edu
 
 Project 3: Specification FAT32 File System
 
